[gd_scene load_steps=14 format=3 uid="uid://drfqmivyn38xg"]

[ext_resource type="Script" path="res://scripts/ui/map_editor_screen.gd" id="1_7dofb"]
[ext_resource type="Script" path="res://scripts/map/grid_manager.gd" id="2_7k5no"]
[ext_resource type="Script" path="res://scripts/map/tile_layer.gd" id="3_souqc"]
[ext_resource type="FontFile" uid="uid://dvjpeiguvrck1" path="res://BLACKCASTLEMF.TTF" id="3_t6ewt"]
[ext_resource type="Texture2D" uid="uid://bxurxurdtxxo4" path="res://Images/Condoterri - ATLAS TEXTURE - map tiles.png" id="4_no1ap"]
[ext_resource type="Script" path="res://scripts/map/tile.gd" id="5_dnico"]
[ext_resource type="Script" path="res://scripts/ui/divider_script.gd" id="6_17ol6"]
[ext_resource type="PackedScene" uid="uid://bxv0deocrf5tp" path="res://scenes/map_editor_pop_up.tscn" id="7_k0u05"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pymwu"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="TileSet" id="TileSet_owkkn"]
tile_size = Vector2i(32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkcn6"]
atlas = ExtResource("4_no1ap")
region = Rect2(3, 3, 94, 94)

[sub_resource type="AtlasTexture" id="AtlasTexture_j64dk"]
atlas = ExtResource("4_no1ap")
region = Rect2(250, 221, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqwlr"]
atlas = ExtResource("4_no1ap")
region = Rect2(0, 336, 94, 94)

[node name="MapEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_7dofb")

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.15
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 6

[node name="MainMapDisplay" type="Panel" parent="HSplitContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="Panel" parent="HSplitContainer/MarginContainer/MainMapDisplay"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.942
offset_left = 25.0
offset_top = 24.0
offset_bottom = 0.0639648
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pymwu")

[node name="GridManager" type="Node2D" parent="HSplitContainer/MarginContainer/MainMapDisplay/GridContainer"]
script = ExtResource("2_7k5no")

[node name="BaseGridLayer" type="TileMapLayer" parent="HSplitContainer/MarginContainer/MainMapDisplay/GridContainer/GridManager"]
tile_set = SubResource("TileSet_owkkn")

[node name="TileLayer" type="TileMapLayer" parent="HSplitContainer/MarginContainer/MainMapDisplay/GridContainer/GridManager"]
script = ExtResource("3_souqc")

[node name="SideMenu" type="Control" parent="HSplitContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="TerrainMenuWrapper" type="MarginContainer" parent="HSplitContainer/SideMenu"]
clip_contents = true
layout_mode = 2
offset_right = 590.0
offset_bottom = 720.0
size_flags_stretch_ratio = 0.57

[node name="MenuWrapper" type="VBoxContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper"]
layout_mode = 2

[node name="TerrainMenu" type="PanelContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper"]
clip_contents = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 3

[node name="TerrainLabel" type="Label" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TerrainMenu"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_t6ewt")
text = "Terrain"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TerrainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TerrainMenu/MarginContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="PanelContainer" type="VBoxContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TerrainMenu/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="MarbleTile_white" type="TextureRect" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TerrainMenu/MarginContainer/ScrollContainer/PanelContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
texture = SubResource("AtlasTexture_bkcn6")
expand_mode = 1
stretch_mode = 5
script = ExtResource("5_dnico")

[node name="MarbleTile_blck" type="TextureRect" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TerrainMenu/MarginContainer/ScrollContainer/PanelContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
texture = SubResource("AtlasTexture_j64dk")
expand_mode = 1
stretch_mode = 5
script = ExtResource("5_dnico")

[node name="GrassTile" type="TextureRect" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TerrainMenu/MarginContainer/ScrollContainer/PanelContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
texture = SubResource("AtlasTexture_gqwlr")
expand_mode = 1
stretch_mode = 5
script = ExtResource("5_dnico")

[node name="Divider" type="Panel" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
script = ExtResource("6_17ol6")

[node name="TriggerMenu" type="PanelContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.25

[node name="TriggerLabel" type="Label" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TriggerMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3_t6ewt")
text = "Triggers"

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TriggerMenu"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 36
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TriggerMenu/MarginContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2

[node name="TriggerList" type="VBoxContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TriggerMenu/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TriggerMenu/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="CreateTriggerButton" type="Button" parent="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TriggerMenu/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_t6ewt")
theme_override_font_sizes/font_size = 16
text = "Create Trigger"

[node name="MapMenuPanel" type="Control" parent="."]
z_index = 2
layout_mode = 1
anchor_left = 0.005
anchor_top = 0.936
anchor_right = 0.448
anchor_bottom = 0.993
offset_left = 0.599999
offset_top = 0.0799561
offset_right = 0.559998
offset_bottom = -1.96002

[node name="Panel" type="Panel" parent="MapMenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="HBoxContainer" parent="MapMenuPanel/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.009
anchor_top = 0.122
anchor_right = 0.99
anchor_bottom = 0.878
offset_left = -0.0390005
offset_top = -0.00200033
offset_right = -0.290039
offset_bottom = 0.0019989
grow_horizontal = 2
grow_vertical = 2

[node name="BackToMain" type="Button" parent="MapMenuPanel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_t6ewt")
theme_override_font_sizes/font_size = 18
text = "Back to Main"

[node name="LoadMapButton" type="Button" parent="MapMenuPanel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_t6ewt")
theme_override_font_sizes/font_size = 18
text = "Load Map"

[node name="SaveAsButton" type="Button" parent="MapMenuPanel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_t6ewt")
theme_override_font_sizes/font_size = 18
text = "Save As"

[node name="SaveMapButton" type="Button" parent="MapMenuPanel/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_t6ewt")
theme_override_font_sizes/font_size = 18
text = "Save Map"

[node name="ToggleMapMenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 586.0
offset_top = 679.0
offset_right = 673.0
offset_bottom = 706.0
theme_override_fonts/font = ExtResource("3_t6ewt")
theme_override_font_sizes/font_size = 16
text = "Open Menu"

[node name="MapEditorPopUp" parent="." instance=ExtResource("7_k0u05")]
visible = false

[connection signal="mouse_entered" from="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/Divider" to="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/Divider" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/Divider" to="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/Divider" method="_on_mouse_exited"]
[connection signal="pressed" from="HSplitContainer/SideMenu/TerrainMenuWrapper/MenuWrapper/TriggerMenu/MarginContainer/HBoxContainer/CreateTriggerButton" to="." method="_on_create_trigger_pressed"]
[connection signal="pressed" from="MapMenuPanel/Panel/VBoxContainer/BackToMain" to="." method="_on_back_to_main_pressed"]
[connection signal="pressed" from="MapMenuPanel/Panel/VBoxContainer/LoadMapButton" to="." method="_on_load_map_button_pressed"]
[connection signal="pressed" from="MapMenuPanel/Panel/VBoxContainer/SaveAsButton" to="." method="_on_save_as_button_pressed"]
[connection signal="pressed" from="MapMenuPanel/Panel/VBoxContainer/SaveMapButton" to="." method="_on_save_map_button_pressed"]
[connection signal="pressed" from="ToggleMapMenuButton" to="." method="_on_toggle_map_menu_button_pressed"]
